--- a/style.scss
+++ b/style.scss
@@ -7,6 +7,7 @@
 
 @import "reset";
 @import "variables";
+@import url('https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap');
 // Syntax highlighting @import is at the bottom of this file
 
 /**************/
@@ -31,7 +32,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: $helveticaNeue;
+  font-family: 'MedievalSharp'; //$helveticaNeue;
   color: $darkerGray;
   font-weight: bold;
 
