--- a/style.scss
+++ b/style.scss
@@ -19,7 +19,7 @@ html {
 }
 
 body {
-  background: #d2aa77; //$white;
+  background: #D9C6A8; //$white;
   font: 18px/1.4 $helvetica;
   color: $darkGray;
 }
@@ -274,9 +274,9 @@ nav {
 
 .wrapper-footer {
   margin-top: 50px;
-  border-top: 1px solid #e1ad6d;
-  border-bottom: 1px solid #e1ad6d;
-  background-color: #c99157;
+  border-top: 1px solid #4F2F22;
+  border-bottom: 1px solid #4F2F22;
+  background-color: #9A7A53;
 }
 
 footer {
