--- a/style.scss
+++ b/style.scss
@@ -157,7 +157,7 @@ img {
 
 .masthead {
   padding: 20px 0;
-  border-bottom: 1px solid $lightGray;
+  border-bottom: 1px solid #9A7A53;
 
   @include mobile {
     text-align: center;
