--- a/style.scss
+++ b/style.scss
@@ -196,7 +196,7 @@ img {
   color: #792614;
   cursor: pointer;
   font-family: 'MedievalSharp';
-  font-weight: 300;
+  font-weight: bold;
   font-size: 28px;
   letter-spacing: 1px;
 }
