--- a/style.scss
+++ b/style.scss
@@ -19,7 +19,7 @@ html {
 }
 
 body {
-  background: #D9C6A8; //$white;
+  background: #D9C6A8;
   font: 18px/1.4 $helvetica;
   color: $darkGray;
 }
@@ -32,7 +32,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'MedievalSharp'; //$helveticaNeue;
+  font-family: 'MedievalSharp';
   color: #792614;
   font-weight: bold;
 
